--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>Create a New Blog Post</h1>
+        <button id="toggleMode">Toggle Light/Dark Mode</button>
     </header>
     <main>
         <form id="blogForm">
@@ -23,6 +24,8 @@
         </form>
         <p id="message"></p>
     </main>
+    <footer>
+    </footer>
     <script src="assets/js/logic.js"></script>
     <script src="assets/js/form.js"></script>
 </body>
